# Prueba

AR61_S_QUIRON_DISCOVERING_BW/: .flake8  README.md  pyproject.toml
AR61_S_QUIRON_DISCOVERING_BW/backend/: enhaced_relationships.py  impact_analysis.py  infocube_analysis.py  optimized_network.py  reports.py
AR61_S_QUIRON_DISCOVERING_BW/connectors/: source_detectors.py  sqlite_connector.py
AR61_S_QUIRON_DISCOVERING_BW/docs/: readme_english.md  readme_spanish.md
AR61_S_QUIRON_DISCOVERING_BW/frontend/: app.py  dashboard.py  home_page.py  impact_page.py  infocube_page.py  object_explorer.py  optimization_page.py  reports_page.py
AR61_S_QUIRON_DISCOVERING_BW/scripts/: main.py
AR61_S_QUIRON_DISCOVERING_BW/tests/backend/: test_enhaced_relationships.py  test_impact_analysis.py  test_infocube_analysis.py  test_optimized_network.py  test_optimized_network_second.py
AR61_S_QUIRON_DISCOVERING_BW/tests/connectors/: test_source_detectors.py  test_sqlite_connector.py
AR61_S_QUIRON_DISCOVERING_BW/tests/frontend/: test_app.py  test_dashboard.py  test_home_page.py  test_impact_page.py  test_infocube_page.py  test_object_explorer.py  test_optimization_page.py  test_reports_page.py
Back/back/micro-service/: package-lock.json
