[project]
name = "ar61-s-quiron-discovering-bw"
version = "0.1.0"
description = "Una herramienta integral de análisis basada en Python para metadatos de SAP BW (Business Warehouse) con análisis avanzado de conexiones InfoCube, visualización de red 3D y capacidades completas de rastreo de sistemas fuente."
authors = [
  { name = "Desarrollo: Manuel Beltrán - Antonio Ortega - Reestructuración: Andres Cortes - David Dorado" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "streamlit>=1.46.1,<2.0.0",
  "pandas>=2.3.1,<3.0.0",
  "networkx>=3.5,<4.0",
  "numpy>=2.3.1,<3.0.0",
  "plotly>=6.2.0,<7.0.0"
]

[project.scripts]
quiron = "scripts.main:lanzar_streamlit"

[tool.poetry]
packages = [
  { include = "backend" },
  { include = "connectors" },
  { include = "frontend" },
  { include = "scripts" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "1.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
